--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.13.0",
+    "del": "^3.0.0",
     "extensions": "edsilv/extensions",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.0.10",
-    "gulp-header": "^1.8.7",
-    "gulp-less": "^3.1.0",
+    "gulp-clean-css": "^3.9.4",
+    "gulp-header": "^2.0.5",
+    "gulp-less": "^4.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.4",
-    "jquery": "^1.11.3",
+    "gulp-uglify": "^3.0.0",
+    "jquery": "^3.3.1",
     "jquery-plugins": "edsilv/jquery-plugins",
     "magnific-popup": "^1.1.0",
+    "natives": "^1.1.4",
+    "run-sequence": "^2.2.1",
     "scrollreveal": "^3.1.4",
     "universalviewer": "universalviewer/universalviewer#v2.0.2",
     "utils": "edsilv/utils"
