--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "exclude": ["dist"],
   "compilerOptions": {
     "paths": {
+      "@/*": ["./src/*"],
       "@layouts/*": ["./src/layouts/*"],
       "@i18n/*": ["./src/i18n/*"]
     }
