add utils alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@layouts/*": ["./src/layouts/*"],
-      "@i18n/*": ["./src/i18n/*"]
+      "@i18n/*": ["./src/i18n/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   }
 }
