--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@/*": ["./src/*"],
       "@layouts/*": ["./src/layouts/*"],
       "@i18n/*": ["./src/i18n/*"],
-      "@utils/*": ["./src/utils/*"]
+      "@utils/*": ["./src/utils/*"],
+      "@config/*": ["./src/config/*"]
     }
   }
 }
