add flags to lang switcher

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "astro": "^5.16.3"
+    "astro": "^5.16.3",
+    "flag-icons": "^7.5.0"
   },
   "devDependencies": {
     "prettier": "^3.8.1",
